# src/main/kotlin/com/wutsi/platform/payment/dto/CreateChargeResponse.kt
@@ -1,0 +1,8 @@
+package com.wutsi.platform.payment.dto
+
+import kotlin.String
+
+public data class CreateChargeResponse(
+    public val id: String = "",
+    public val status: String = ""
+)
